refactor: rename Project method param project->p across codebase (add @NotNull where missing) #2